# studyCpp

./: define.c  dir.c  mainArg.c  predefChar.c  printfColor.c  stringOperate.c  test.c  test.cpp  thread.c  va_list.c
98-汇编/00-if与switch/: 00-if-O0.s  00-if-O2.s  00-if.c  01-switch-O0.s  01-switch-O2.s  01-switch.c
99_功能/02-工厂+注册/: demo  factory.h  main.cpp  message.h
99_功能/03-有向图临近表深度搜索/: 00-有向图临近表深度搜索.cpp  01-错误诊断.cpp  02-test.dot
99_功能/04-pytorch-transform同类型预处理实现/: CMakeLists.txt  demo.cpp
99_功能/05-故障诊断/: 00-main.cpp  demo
99_功能/07-cmake调用python生成*.h/: CMakeLists.txt  config.json  json_to_cpp.py  main.cc
99_功能/08-符号hidden/: main.cc  release.sh  test.cc  test.h
99_功能/09-高效获取线程id/: 01-pthread_self.c  02-TLS线程局部存储.c
99_功能/10-文件读写/: 01-dio写文件.cpp
99_功能/11-类的私有函数如何测试/: 01-子类作为友元访问父类全部数据.cpp
C/: assertExitAbort.c  byteAlignment.c  c_cpp_properties.json  callBack.cpp  dataType.c  enum.c  flameGraph.c  init  init.c  linker.c  mainArg.c  printfColor  process.c  progressBar.c  test  test.c
C/grammar/: #.cpp
Cpp/99-现代c++/: demo
Cpp/RAII/: 01-内存申请-使用is_value判断.cc  02-内存申请-使用空指针判断.cc  demo
Cpp/base/: 1_quote.cpp  2_funcDefaultParameters.cpp  3_funcPlaceholderParameter.cpp  4_funcOverloading.cpp  5_funcOverloading02.cpp  6_const.cpp
Cpp/c++11/: 00-字符串原始字面量.cpp  01-智能指针.cpp  02-原子变量.cpp  03-原子变量loading.cpp  04-智能指针效率测试.cpp  05-unique_ptr.cpp  demo
Cpp/c++14/: 01-函数返回值类型推导.cpp  02-lambda参数auto.cpp  03-变量模版.cpp  (+9 more)
effective_c++/: 00-介绍.cpp  01-c++联邦.cpp  02-不要滥用宏.cpp
neon/: neon_init_reg.cpp  neon_types.cpp
swift/: readme.md
tools/: 00-版本号.c  demo
(+213 files in other folders)
